--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ axum = { version = "0.7", features = ["macros", "json", "multipart", "tokio"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tower-http = { version = "0.5", features = ["trace", "cors"] }
+tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -26,11 +26,15 @@ dashmap = "5"
 dotenvy = "0.15"
 anyhow = "1"
 nix = { version = "0.29", features = ["fs"] }
+futures-util = "0.3"
+bytes = "1"
 
 [dev-dependencies]
 tower = "0.5"
 http-body-util = "0.1"
 mime = "0.3"
+tempfile = "3.24.0"
+
 
 [lib]
 name = "jsecure_cloud"
